--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,11 +8,10 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>MS Snedker</title>
 	</head>
 	<body>
-		<h1>MS Snedker test
-			
+		<h1>MS Snedker
 		</h1>
 	</body>
 </html>
