modified:   src/pages/about.astro 	modified:   src/pages/index.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+const pageTitle = "MS Snedker";
 ---
 
 <html lang="en">
@@ -8,11 +8,11 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>MS Snedker</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
-		<a href="/about/">About</a>
-		<h1>MS Snedker</h1>
+		<a href="/">Hjem</a>
+		<a href="/about/">Om</a>
+		<h1>{pageTitle}</h1>
 	</body>
 </html>
