--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,7 @@
 ---
-import '../styles/global.css';
+import BaseLayout from "../layouts/BaseLayout.astro";
 const pageTitle = "MS Snedker";
 ---
-
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-	</head>
-	<body>
-		<a href="/">Hjem</a>
-		<a href="/about/">Om</a>
-		<h1>{pageTitle}</h1>
-	</body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+	<h2>My Awesome Blog</h2>
+</BaseLayout>
