Added instant transitions with Full site view transitions

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,9 @@
 ---
 import Hamburger from "./Hamburger.astro"
 import Navigation from "./Navigation.astro"
+import { ClientRouter } from 'astro:transitions';
 ---
-
+<ClientRouter />
 <header>
     <nav>
         <Hamburger />
