modified:   astro.config.mjs 	modified:   package-lock.json 	modified:   package.json 	new file:   public/apple-touch-icon.png 	new file:   public/favicon-96x96.png 	new file:   public/favicon.ico 	deleted:    public/favicon.png 	new file:   public/favicon.svg 	new file:   public/site.webmanifest 	new file:   public/web-app-manifest-192x192.png 	new file:   public/web-app-manifest-512x512.png 	new file:   src/components/Greeting.jsx 	modified:   src/components/Header.astro 	modified:   src/components/Social.astro 	modified:   src/layouts/BaseLayout.astro 	deleted:    src/layouts/MarkdownPostLayout.astro 	deleted:    src/pages/blog.astro 	modified:   src/pages/index.astro 	deleted:    src/pages/posts/post-1.md 	deleted:    src/pages/posts/post-2.md 	deleted:    src/pages/tags/[tag].astro 	modified:   src/styles/global.css 	modified:   tsconfig.json

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,8 +5,11 @@ import { ClientRouter } from 'astro:transitions';
 ---
 <ClientRouter />
 <header>
-    <nav>
-        <Hamburger />
-        <Navigation />
-    </nav>
+    <div>
+        <a href="/"><img src="/favicon-96x96.png" alt=""></a>
+        <nav>
+            <Hamburger />
+            <Navigation />
+        </nav>
+    </div>
 </header>
