--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -1,15 +1,15 @@
 ---
 const { platform, username } = Astro.props;
 ---
-<a href={`https://www.${platform}.com/${username}`}>{platform}</a>
+<a href={`https://www.${platform}.com/${username}`}><u>{platform}</u></a>
 
 <style>
 a {
     padding: 0.5rem 1rem;
-    color: white;
-    background-color: #4c1d95;
+    color: black;
     text-decoration: none;
     border-radius: 50px;
+    position: relative;
 }
 
 </style>
