--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
+import Greeting from '../components/Greeting';
 const pageTitle = "MS Snedker";
 ---
 <BaseLayout pageTitle={pageTitle}>
-	<h2>My Awesome Blog</h2>
 </BaseLayout>
