--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,9 +3,9 @@ html {
     font-family: sans-serif;
 }
 body {
-    margin: 0 auto;
+    margin: 0;
     width: 100%;
-    max-width: 80ch;
+    /*max-width: 80ch;*/
     padding: 1rem;
     line-height: 1.5;
 }
@@ -36,10 +36,10 @@ h1 {
 .nav-links {
     width: 100%;
     top: 5rem;
-    left: 48px;
+    left: auto;
     background-color: #ff9776;
-    display: none;
-    margin: 0;
+    display: block;
+    float: right;
   }
   
   .nav-links a {
@@ -54,7 +54,7 @@ h1 {
   
   .nav-links a:hover,
   .nav-links a:focus {
-    background-color: #ff9776;
+    color: #ff9776;
   }
   
   .expanded {
