--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,10 +1,8 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import Greeting from '../components/Greeting';
 const pageTitle = "Projekter";
 ---
 <BaseLayout pageTitle={pageTitle}>
-    <head>
-        <link type="text/css" rel="stylesheet" href="css/lightgallery-bundle.css" />
-    </head>
+    <body>
+    </body>
 </BaseLayout>
